# evoforge-ai

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  models.py
app/api/: routes.py
app/services/: ingest.py  learner.py  proposals.py  simulator.py
data/: sample_events.json
docs/: examples.md
evoforge_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py
