[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoforge-ai"
version = "0.1.0"
description = "AI-powered software enhancement automation and future-version impact simulation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI"}]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0"
]

[tool.setuptools]
packages = ["app", "app.api", "app.services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
